--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -280,6 +280,7 @@ jobs:
           repositories_skipped: jayvdb/jayvdb.github.io, jayvdb/wyam-test, jayvdb/pywikibot-osx-wheels, jayvdb/pe-id-en, jayvdb/emplace-data, jayvdb/my-ci-test
 
           plugin_languages: true  # Show language bar
+          plugin_languages_other: true
           plugin_languages_sections: most-used
           plugin_languages_categories: data, markup, programming, prose  # All categories
           plugin_languages_details: bytes-size, percentage  # Show percentages, with 2 decimals of precision
@@ -315,6 +316,7 @@ jobs:
           repositories_skipped: jayvdb/jayvdb.github.io, jayvdb/wyam-test, jayvdb/pywikibot-osx-wheels, jayvdb/pe-id-en, jayvdb/emplace-data, jayvdb/my-ci-test
 
           plugin_languages: true  # Show language bar
+          plugin_languages_other: true
           plugin_languages_sections: recently-used
           plugin_languages_recent_categories: programming
           plugin_languages_recent_days: 30
